--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
             </div>
         <div class="hero-box paddingBottomMobile-thirty paddingTopMobile-thirty">
             <div class="hero-content wrapper text-center">
-                <h1 class="heading">Vellore institute of Technology</h1>
+                <h1 class="heading">Satya institute of Technology</h1>
                 <div class="small-heading">your future is here</div>
             </div>
         </div>
