--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="hero-box paddingTopMobile-thirty paddingBottomMobile-thirty">
           <div class="hero-content text-center wrapper">
-            <h1 class="heading">Vellore Institute of Technology</h1>
+            <h1 class="heading">Satya Institute of Technology</h1>
             <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, dolorem excepturi. Quo et beatae facere rerum, fugit recusandae libero velit.</p>
             <div class="button-container">
               <a href="./contact.html" class="home-button button-primary-light">get started</a>
@@ -205,7 +205,7 @@
               </a>
             </div>
             <div class="campus-info text-center">
-              <h2 class="campus-title">vit vellore campus</h2>
+              <h2 class="campus-title">Satya vellore campus</h2>
               <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque mollitia sapiente deleniti, sint expedita illum nobis quasi id! Ipsa natus aliquid ratione et deserunt eligendi sequi provident consectetur adipisci.</p>
               <h4 class="address">Vellore, tamilnadu, india</h4>
 
@@ -221,7 +221,7 @@
                 </a>
               </div>
               <div class="campus-info text-center">
-                <h2 class="campus-title">vellore institute of technology</h2>
+                <h2 class="campus-title">Satya institute of technology</h2>
                 <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, est ut ratione sapiente nihil fugit ea odio! Reprehenderit doloremque nihil laboriosam fuga distinctio dolorum sint necessitatibus quidem aperiam illo amet aliquam esse, sit perferendis blanditiis.</p>
                 <h4 class="address">pondicherry, india</h4>
               </div>
@@ -236,7 +236,7 @@
               </a>
             </div>
             <div class="campus-info text-center">
-              <h2 class="campus-title">vellore institute of research</h2>
+              <h2 class="campus-title">Satya institute of research</h2>
               <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, est ut ratione sapiente nihil fugit ea odio! Reprehenderit doloremque nihil laboriosam fuga distinctio dolorum sint necessitatibus quidem aperiam illo amet aliquam esse, sit perferendis blanditiis.</p>
               <h4 class="address">chennai, tamilnadu, india</h4>
             </div>
