--- a/courses.html
+++ b/courses.html
@@ -98,7 +98,7 @@
               </div>
           <div class="hero-box paddingBottomMobile-thirty paddingTopMobile-thirty">
               <div class="hero-content wrapper text-center">
-                  <h1 class="heading">Vellore institute of Technology</h1>
+                  <h1 class="heading">Satya institute of Technology</h1>
                   <div class="small-heading">Select Your courses</div>
               </div>
           </div>
