--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               </a>
             </div>
             <div class="campus-info text-center">
-              <h2 class="campus-title">vellore institute of Agriculture</h2>
+              <h2 class="campus-title">Satya institute of Agriculture</h2>
               <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, est ut ratione sapiente nihil fugit ea odio! Reprehenderit doloremque nihil laboriosam fuga distinctio dolorum sint necessitatibus quidem aperiam illo amet aliquam esse, sit perferendis blanditiis.</p>
               <h4 class="address">Godavari, Andhra pradesh, india</h4>
             </div>
